Transition effects work! To Do -Bring back Carousel arrows -handle the scrolling news feed height on small screens (can't see grant info) -prevent additional scroll events during transition animation

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -213,13 +213,14 @@
   }
 }
 .ternary-upper{
+  margin-top: 40px !important;
   margin-bottom: 20px !important;
 }
 .ternary-content{
   display:block;
-  height:85vh;
+  height: 70vh;
   .news-prev-wrapper{
-  height: 60vh;
+  height: 40vh;
   overflow-y: scroll;
   background-color: white !important;
   }
